# CodeSense

./: .gitignore  README.md  pyproject.toml  verify_classify.py
.claude/: settings.local.json
.codemaker/: codemap.mdc  mcps.json  workspace.json
.codemaker/codeindex/: _architecture.md  _catalog.md  _concept_index.md  _core_systems.md  _index.md  _project_overview.md  kb-config.json
.codemaker/codemap/: mcp_stats.json  meta.json
.codemaker/rules/: experiment-reporting.mdc
.codesense/: .codesense_config  .codesenseignore  meta.json  modules_index.json  project_map.json  project_map.md
.codesense/modules/: .hashes.json  0ec45f3019a0.json  103a50337267.json  13087e1bc714.json  18a71d941ec5.json  5b2aa470e700.json  LLM交互.md  MCP服务端.md  MCP资源.md  a9310c413aa2.json  aa70c52d6805.json  be59eb9cb33e.json  c15668b86bc6.json  d857936bd497.json  d97701c357bc.json  f36de7225397.json  fb03e4f24085.json  工具实现.md  摘要引擎.md  摘要生成.md  数据层.md  数据管理.md  注册中心.md  缓存层.md  缓存管理.md  错误定义.md
.codesense/project_map_segments/: 01_identity.hash  01_identity.md  02_structure.hash  02_structure.md  03_modules.hash  03_modules.md  04_constraints.hash  04_constraints.md  04_dependencies.hash  04_dependencies.md  (+6 more)
doc/: stack.md  usage_codemaker（Week2版本，未更新）.md
scripts/: validate_dir_deps.py
tests/: conftest.py  test_add.py  test_cache.py  test_data_aggregate.py  test_data_architecture.py  test_data_db.py  test_data_docstrings.py  test_data_modules.py  test_explore_module.py  test_llm.py  test_mcp_integration.py  test_registry.py  test_resources_project_map.py  test_summarizer.py
(+213 files in other folders)
