[project]
name = "codesense-v1"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "mcp",
    "jsonschema",
    "openai>=2.41.1",
    "json-repair>=0.30",
    "pathspec>=0.12",
]

[project.scripts]
codesense_v1 = "codesense_v1.server:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "types-jsonschema>=4.26.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codesense_v1"]

[tool.mypy]
strict = true
python_version = "3.14"
mypy_path = ["src"]
packages = ["codesense_v1"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
